--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # tmux display things in 256 colors
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color-italic"
+set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # unbind default prefix and set it to Ctrl+a
 unbind C-b
